2A/05_Projet_GL/src/test/deca/syntax/valid/SansObjet/20_PrintCalculExpr.deca
// Description:
//    Programme  print une expression, un calcul 
// Resultats:
//      programme correcte syntaxiquement, invalide contextuellement
//
// Historique:
//    cree le 09/01/2024
{
    print(x+y*z);  
}