2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/08_PrintavecCommaSansexprapres.deca
// Description:
//    tests de programme print qui prend une list des expressions mais pas d'expression après la dernière ","
//
// Resultats:
//    ligne 10  : Erreur,  mismatched input ')'
//
// Historique:
//    cree le 09/01/2024
{ 
    print("hello",3,);
}